--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>express 搭建静态目录</title>
+  <meta charset=utf-8>
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <!-- <link rel="shortcut icon" href=./static/images/logo.png> -->
+  <title>test</title>
 </head>
 <body>
-
+  <div id="app">
+    test2020
+  </div>
 </body>
 </html>
